core/app_main/static/app_main/assets/css/styles.css
/* ... */
*/


body {
  font-size: 16px;
  /*font-family: 'Noto Sans', sans-serif;*/
  font-family: 'DM Sans', sans-serif;
}

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
  font-family: 'Gilroy', sans-serif;
}

.article {
  font-family: 'Noto Sans', sans-serif;
}

.material-icons {
  display: inline-flex; /* Support that icon stay on one line with text */
  font-size: 24px;
  line-height: 1;
}

.nav-link {
  display: flex;
  align-items: center;  /* Centered icon by vertical*/
  gap: 0.5rem;          /* Indent between icon and text*/
  padding: 0.75rem 1rem;
  border-radius: 0.75rem !important;
}


/*
.sidebar-nav .navbar-nav a {
    display: flex;
    align-items: center;
    text-transform: uppercase;
    font-size: 14px;
    letter-spacing: 1px;
    color: #6c757d;
    padding: 12px 16px !important;
    border-radius: 11px;
    background: #edf2f6;
    margin-bottom: 9px;
}
.sidebar-nav .navbar-nav .dropdown-menu {
    position: static !important;
    transform: unset !important;
    padding: 0px !important;
    border: none;
    background: transparent;
}
.sidebar-nav .navbar-nav .dropdown-menu a {
    padding: 12px 16px !important;
    font-size: 13px;
    margin: 2px 0px !important;
    border-radius: 8px !important;
}
.sidebar-nav .navbar-nav a:hover, .sidebar-nav .navbar-nav a.active {
    color: #000000;
    background: #ffffff;
    box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
}
.dropdown-toggle::after {
    margin-left: auto;
}
.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
    background-color: var(--gray-light-rgb);
    border-bottom: 2px solid #0d6efd;
    border-radius: 0px;
    color: #000 !important;
}
*/

.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
  color: #ffffff;
  background-color: var(--bs-sky);
}

.nav .nav-item:hover .nav-link {
  color: var(--white);
  background-color: var(--bs-sky-hover);
}

.nav .nav-item:active .nav-link {
  color: var(--white);
  background-color: var(--stable-blue);
}

.nav-item .nav-link {
  color: inherit;
}

.nav-item .nav-link .material-icons {
  color: inherit;
}

.dropdown-menu {
  --bs-dropdown-link-hover-bg: var(--bs-blue-primary);
  --bs-dropdown-link-hover-color: var(--white);
}


.model-detail-div, .model-detail-div:hover {
  text-decoration: none;
  color: #000;
  -webkit-transition: all .15s ease;
  -o-transition: all .15s ease;
  transition: all .15s ease;
  background-color: var(--bs-secondary-bg);
  border-color: #0080C0;
  border-width: 2px;
}

.model-detail-div {
  display: block;
  /*background: var(--bs-tertiary-bg);*/
  background-color: var(--bs-tertiary-bg);
  border: 2px solid #00a0e4;
}

.px2rem {
  padding-right: 2.0rem !important;
  padding-left: 2.0rem !important;
}

.job-details {
  font-family: 'Gilroy', sans-serif !important;
}

.vbar {
  position: relative;
  /*display: flex;*/
  padding: 0px;
  font-size: 16px;
  line-height: 20px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  transition: background 33.333ms linear;
  color: var(--fgColor-default, var(--color-fg-default, #1F2328));
  cursor: pointer;
  appearance: none;
  background-image: unset;
  background-position: unset;
  background-size: unset;
  background-repeat: unset;
  background-attachment: unset;
  background-origin: unset;
  background-clip: unset;
  border: unset;
  width: calc(100% - 8px);  /* 8 = after::left */
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected, var(--color-action-list-item-default-selected-bg, rgba(208, 215, 222, 0.24)));
}


.vbar::after {
  position: absolute;
  top: calc(50% - 15px);  /* 15 = 0.5*height */
  left: -8px;
  width: 4px;
  height: 30px;
  content: "";
  background-color: var(--bs-sky);
  border-radius: 6px;
}

.vlink {
  padding: 6px 8px;
  display: flex;
  -webkit-box-flex: 1;
  flex-grow: 1;
  border-radius: 6px;
  color: inherit;
}

.cQdyWD {
  padding: 6px 8px;
  display: flex;
  -webkit-box-flex: 1;
  flex-grow: 1;
  border-radius: 6px;
  color: inherit;
}

